crates/oxc_react_compiler/tests/snapshots/fixture_tests__arrow-component_tsx.snap
---
source: crates/oxc_react_compiler/tests/fixture_tests.rs
expression: snapshot
---
transformed: true
diagnostics: 0
---
import { c as _c } from "react/compiler-runtime";
const Button = (t0) => {
  const $ = _c(3);
  let { onClick, label } = t0;
  let t7;
  if ($[0] !== label || $[1] !== onClick) {
    t7 = <button onClick={onClick}>{label}</button>;
    $[0] = label;
    $[1] = onClick;
    $[2] = t7;
  } else {
    t7 = $[2];
  }
  return t7;
}
;
