crates/oxc_react_compiler/tests/snapshots/fixture_tests__basic-component_tsx.snap
---
source: crates/oxc_react_compiler/tests/fixture_tests.rs
expression: snapshot
---
transformed: true
diagnostics: 0
---
import { c as _c } from "react/compiler-runtime";
import { jsx as _jsx, jsxs as _jsxs, Fragment as _Fragment } from "react/jsx-runtime";
function Counter(t0) {
  const $ = _c(2);
  const { count } = t0;
  let t13;
  if ($[0] !== count) {
    t13 = _jsx("div", { children: count });
    $[1] = t13;
    $[0] = count;
  } else {
    t13 = $[1];
  }
  return t13;
}
