crates/oxc_react_compiler/tests/snapshots/fixture_tests__component-with-children_tsx.snap
---
source: crates/oxc_react_compiler/tests/fixture_tests.rs
expression: snapshot
---
transformed: true
diagnostics: 0
---
import { c as _c } from "react/compiler-runtime";
function Layout(t0) {
  const $ = _c(1);
  let t6;
  if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
    t6 = <div className="container">{children}</div>;
    $[0] = t6;
  } else {
    t6 = $[0];
  }
  return t6;
}
