crates/oxc_react_compiler/tests/snapshots/fixture_tests__component-with-conditional_tsx.snap
---
source: crates/oxc_react_compiler/tests/fixture_tests.rs
expression: snapshot
---
transformed: true
diagnostics: 0
---
import { c as _c } from "react/compiler-runtime";
function Toggle(t0) {
  const $ = _c(2);
  let t6;
  let t9;
  let { isOn } = t0;
  if (isOn) {
    if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
      t6 = (
        <div>
          ON
        </div>
      );
      $[0] = t6;
    } else {
      t6 = $[0];
    }
    return t6;
  }
  if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
    t9 = (
      <div>
        OFF
      </div>
    );
    $[1] = t9;
  } else {
    t9 = $[1];
  }
  return t9;
}
