crates/oxc_react_compiler/tests/snapshots/fixture_tests__component-with-derived_tsx.snap
---
source: crates/oxc_react_compiler/tests/fixture_tests.rs
expression: snapshot
---
transformed: true
diagnostics: 0
---
import { c as _c } from "react/compiler-runtime";
function Display(_t0) {
  /* t25 = Discriminant(4) */
  const t26 = items;
  const t27 = _t26.length;
  const count = _t27;
  /* t29 = Discriminant(4) */
  const t30 = count;
  const t31 = 0;
  const t32 = _t30 > _t31;
}
