crates/oxc_react_compiler/tests/snapshots/fixture_tests__exported-default_tsx.snap
---
source: crates/oxc_react_compiler/tests/fixture_tests.rs
expression: snapshot
---
transformed: true
diagnostics: 0
---
import { c as _c } from "react/compiler-runtime";
import { jsx as _jsx, jsxs as _jsxs, Fragment as _Fragment } from "react/jsx-runtime";
export default function Page(t0) {
  const $ = _c(2);
  const { content } = t0;
  let t13;
  if ($[0] !== content) {
    t13 = _jsx("main", { children: content });
    $[0] = content;
    $[1] = t13;
  } else {
    t13 = $[1];
  }
  return t13;
}
