crates/oxc_react_compiler/tests/snapshots/fixture_tests__hook-with-state_tsx.snap
---
source: crates/oxc_react_compiler/tests/fixture_tests.rs
expression: snapshot
---
transformed: true
diagnostics: 0
---
import { c as _c } from "react/compiler-runtime";
function useCounter() {
  const $ = _c(4);
  let t2;
  if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
    t2 = 0;
    $[0] = t2;
  } else {
    t2 = $[0];
  }
  let t3 = useState(t2);
  let count;
  let setCount;
  ([count, setCount] = t3);
  let t9;
  if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
    let t8 = () => {
      return setCount((count + 1));
    };
    t9 = { count, increment: t8 };
    $[1] = t9;
    $[2] = count;
    $[3] = setCount;
  } else {
    t9 = $[1];
    count = $[2];
    setCount = $[3];
  }
  return t9;
}
