crates/oxc_react_compiler/tests/snapshots/fixture_tests__multiple-components_tsx.snap
---
source: crates/oxc_react_compiler/tests/fixture_tests.rs
expression: snapshot
---
transformed: true
diagnostics: 0
---
import { c as _c } from "react/compiler-runtime";
import { jsx as _jsx, jsxs as _jsxs, Fragment as _Fragment } from "react/jsx-runtime";
function Header(t0) {
  const $ = _c(3);
  let title;
  if ($[0] !== title) {
    $[0] = title;
  } else {
  }
  ({ title } = t0);
  let t13;
  if ($[1] !== title) {
    const t11 = "h1";
    const t12 = title;
    t13 = _jsx(t11, { children: t12 });
    $[2] = t13;
    $[1] = title;
  } else {
    t13 = $[2];
  }
  return t13;
}


function Footer(t0) {
  const $ = _c(3);
  let text;
  if ($[0] !== text) {
    $[0] = text;
  } else {
  }
  ({ text } = t0);
  let t13;
  if ($[1] !== text) {
    const t11 = "footer";
    const t12 = text;
    t13 = _jsx(t11, { children: t12 });
    $[2] = t13;
    $[1] = text;
  } else {
    t13 = $[2];
  }
  return t13;
}
